package com.iesvdc.acceso.zapapp.models;

public enum Estado {
    CARRITO,
    REALIZADO,
    PREPARANDO,
    ENVIADO,
    COMPLETADO,
    INCIDENCIA
}
