package com.iesvdc.acceso.zapapp.models;

public enum Rol {
    OPERARIO, CLIENTE, GESTOR
}
